//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package complex_rpc;

import "encoding.proto";

service ComplexService {
  rpc EchoSample(encoding.SampleMessage) returns (encoding.SampleMessage) {}
  rpc StreamCollections(encoding.SampleMessage) returns (stream encoding.CollectionsMessage) {}
  rpc EchoContainer(encoding.ZeroCopyContainer) returns (encoding.ZeroCopyContainer) {}
}