pub mod advanced {
    tonic::include_proto!("advanced");
}
pub mod sigma_rpc {
    tonic::include_proto!("sigma_rpc");
}
pub mod rizz_types {
    tonic::include_proto!("rizz_types");
}
pub mod goon_types {
    tonic::include_proto!("goon_types");
}
pub mod complex_rpc {
    tonic::include_proto!("complex_rpc");
}
pub mod encoding {
    tonic::include_proto!("encoding");
}
